# ffmpegstudy

./: README.md  build.gradle
app/: .gitignore  CMakeLists.txt  build.gradle
app/src/androidTest/java/com/xiaopeng/ffmpegstudy/: ExampleInstrumentedTest.java  ThreadTest.java  TimeTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: audio.cpp  audio.h  video.cpp  video.h  xp-ffmpeg.cpp  xp-ffmpeg.h
app/src/main/java/com/xiaopeng/ffmpegstudy/: FfMpegFragment.java  FfmpegActivity.java  MainActivity.java
app/src/main/java/com/xiaopeng/ffmpegstudy/androidaudio/: AndroidAudioActivity.java  AudioAdapter.java
app/src/main/java/com/xiaopeng/ffmpegstudy/audio/: AudioCallback.java  AudioMainActivity.java  AudioPlayer.java
app/src/main/java/com/xiaopeng/ffmpegstudy/ffmpeg/: FfmpegContextActivity.java
app/src/main/java/com/xiaopeng/ffmpegstudy/loop/: MainLoopObserable.java
app/src/main/java/com/xiaopeng/ffmpegstudy/model/: VideoModel.java
app/src/main/java/com/xiaopeng/ffmpegstudy/thread/: Consumer.java  Message.java  Producer.java
app/src/main/java/com/xiaopeng/ffmpegstudy/util/: BitmapUtil.java
app/src/main/java/com/xiaopeng/ffmpegstudy/video/: VideoActivity.java  VideoView.java
app/src/main/res/layout/: activity_android_audio.xml  activity_audio.xml  activity_ffmpeg.xml  activity_main.xml  activity_video.xml  item_audio.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/xiaopeng/ffmpegstudy/: ExampleUnitTest.java  TimeTest.java
distribution/include/libavutil/: ffversion.h
gradle/wrapper/: gradle-wrapper.properties
suanfa/src/main/java/com/xiaopeng/suanfa/: DataProvider.java  InsertSort.java  MaoPaoSort.java  QuickSort.java
suanfa/src/main/java/com/xiaopeng/suanfa/designmode/: AdapterMode.java  DeckerMode.java  FactoryMode.java  GroupMode.java  ObserverMode.java  PolicyMode.java  ProxyMode.java  SingletonMode.java  TempletMode.java
suanfa/src/main/java/com/xiaopeng/suanfa/find/: FeiBoSum.java  OrderFind.java
suanfa/src/main/java/com/xiaopeng/suanfa/sort/: DataProvider.java  InsertSort.java  MaoPaoSort.java  MergeSort.java  QuickSort.java  RedixSort.java  SelectionSort.java
